--- a/src/app/pages/error-four-four/error-four-four.page.html
+++ b/src/app/pages/error-four-four/error-four-four.page.html
@@ -1,12 +1,6 @@
-<ion-header>
-    <ion-toolbar>
-       
-    </ion-toolbar>
-</ion-header>
 
 <ion-content class="ion-padding">
-  <h2>Error 404</h2>
-  <p>OoOps ! Tu t'es perdu on dirait</p>
-  <ion-button routerLink="/home" fill="clear">Retourner à la maison</ion-button>
-
+  <h2>404</h2>
+  <p>GAME OVER</p>
+  <ion-button routerLink="/home" fill="clear">Volver a intentar</ion-button>
 </ion-content>
