--- a/src/app/pages/sign-in/sign-in.page.scss
+++ b/src/app/pages/sign-in/sign-in.page.scss
@@ -15,3 +15,11 @@
     flex-direction: column;
     width: 18rem;
 }
+
+.margin-text{
+    margin-top: 0.5rem;
+}
+
+.form-rounded {
+    height: 3rem;  
+}
