--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -14,11 +14,11 @@
         <p class="userEmail">{{email}}</p>
       </div>
     </div>
-    <div class="containerMenu">
+<!--     <div class="containerMenu">
       <div class="general">General</div>
       <div routerLink="/tabs/profile-details" class="details">Detalles</div>
       <div routerLink="/tabs/profile-favs" class="favorites">Favoritos</div>
-    </div>
+    </div> -->
   </div>
 </ion-header>
 
