--- a/src/app/pages/account/account.page.scss
+++ b/src/app/pages/account/account.page.scss
@@ -31,7 +31,7 @@
 
 .text4 {
   font-size: 1rem;
-  margin: 0rem;
+  margin-bottom: 0.2rem;
   color: white;
 }
 
@@ -65,7 +65,7 @@
 
 .userEmail {
   font-size: 0.8rem;
-  margin-bottom: 0;
+  margin-bottom: 1rem;
   color: white;
 }
 
@@ -98,18 +98,19 @@
 }
 
 .containerTrophy {
-  padding: 16px;
+  padding: 1rem;
+  margin: 0;
   background: #f7f9fc;
   width: 100%;
   height: 100%;
 }
 
 .tagTrophy {
-  padding: 4px 0 0 10px;
+  padding: 0.7rem 0 0 1rem;
   border-radius: 10px 10px 0 0;
   background: linear-gradient(#47feb0, #1de3ca);
   height: 2rem;
-  margin-top: 30px;
+  margin-top: 0;
   width: 40%;
 }
 
