--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -9,21 +9,26 @@
 
     <ion-content class="color-white-ionTheme3 ion-padding">
       <ion-list>
-        <ion-item routerLink="/tabs/account">
-          <ion-icon name="contact" slot="start"></ion-icon>
+        <ion-item routerLink="/tabs/account" (click)="closeFirst()">
+          <ion-icon name="contact" slot="start" ></ion-icon>
           <ion-label>Mi Cuenta</ion-label>
         </ion-item>
-        <ion-item routerLink="/tabs/quizzes">
+        <ion-item routerLink="/tabs/quizzes" (click)="closeFirst()">
           <ion-icon name="list-box" slot="start"></ion-icon>
           <ion-label>Mis quizzes</ion-label>
         </ion-item>
-        <ion-item routerLink="/tabs/schoolsList">
+        <ion-item routerLink="/tabs/schoolsList" (click)="closeFirst()">
           <ion-icon name="school" slot="start"></ion-icon>
           <ion-label>Organizaciones</ion-label>
         </ion-item>
         <ion-item routerLink="/home">
           <ion-icon name="log-out" slot="start"></ion-icon>
           <ion-label>Logout</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon slot="start" name="moon"></ion-icon>
+          <ion-label>Dark Mode</ion-label>
+          <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="change()" (click)="closeFirst()"></ion-toggle>
         </ion-item>
       </ion-list>
      </ion-content>
