--- a/src/app/pages/error-four-four/error-four-four.page.html
+++ b/src/app/pages/error-four-four/error-four-four.page.html
@@ -1,6 +1,5 @@
 
 <ion-content class="ion-padding">
-  <h2>404</h2>
-  <p>GAME OVER</p>
+  <img src="https://image.freepik.com/vector-gratis/ilustracion-concepto-uy-error-404-robot-roto_114360-1932.jpg"/>
   <ion-button routerLink="/home" fill="clear">Volver a intentar</ion-button>
 </ion-content>
