--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -7,7 +7,7 @@
     </ion-toolbar>
   </ion-header>
 
-    <ion-content class="color-white-ionTheme3 ion-padding">
+    <ion-content class="ion-padding">
       <ion-list>
         <ion-item routerLink="/tabs/account" (click)="closeFirst()">
           <ion-icon name="contact" slot="start" ></ion-icon>
