--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons mode="ios" slot="start" >
-    <ion-back-button text="Atrás" defaultHref="/tabs/games"></ion-back-button>
+    <ion-buttons mode="ios" slot="start">
+      <ion-back-button text="Atrás" defaultHref="/tabs/games"></ion-back-button>
     </ion-buttons>
     <ion-title>{{name}}</ion-title>
   </ion-toolbar>
@@ -9,33 +9,49 @@
 
 <ion-content>
   <ion-progress-bar color="primary" value="0.5"></ion-progress-bar>
-  <img src="{{logo}}" />
- <p>Descripción: {{description}}</p> 
- <p>Cantidad de preguntas: {{quantity}}</p> 
 
- <p>{{this.School.name}}</p> 
- <img src="{{this.School.logo}}" />
- <p>{{this.Subject.name}}</p> 
- 
- <ion-button (click)="comenzar()" shape="round" fill="outline">Comenzar!!</ion-button>
+  <ion-card>
+    <div class="quizImg">
+      <img src="{{logo}}" />
+    </div>
+    <ion-card-header>
+      <ion-card-title>{{name}}</ion-card-title>
+      <ion-card-subtitle class="textQuiz">{{quantity}} preguntas</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <p class="textQuiz"><em>Descripción</em> {{description}}</p>
+      <img src="{{this.School.logo}}"/>
+      <p class="textQuiz">{{this.School.name}}</p>
+      <p class="textQuiz">{{this.Subject.name}}</p>
+    </ion-card-content>
 
- <ion-list>
-  <ion-item-sliding *ngFor="let q of Questions" >
-   
+    <ion-button (click)="comenzar()" class="light">Comenzar!!</ion-button
+    >
+  </ion-card>
+
+<!--   <img src="{{logo}}" />
+  <p>Descripción: {{description}}</p>
+  <p>Cantidad de preguntas: {{quantity}}</p>
+
+  <p>{{this.School.name}}</p>
+  <img src="{{this.School.logo}}" />
+  <p>{{this.Subject.name}}</p>
+
+  <ion-button (click)="comenzar()" shape="round" fill="outline"
+    >Comenzar!!</ion-button
+  > -->
+
+  <ion-list>
+    <ion-item-sliding *ngFor="let q of Questions">
       <ion-card>
-  
         <ion-card-header>
           <ion-card-title>bla bla</ion-card-title>
           <ion-card-subtitle>bla bla 2</ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>bla bla 3</ion-card-content>
 
-        <ion-button color="light" *ngFor="let a of Answers" 
-        (click)="1+1" 
-        
-        >
+        <ion-button color="light" *ngFor="let a of Answers" (click)="1+1">
           Acá va la respuesta
-          
         </ion-button>
       </ion-card>
     </ion-item-sliding>
