--- a/src/app/pages/quizzes/quizzes.page.html
+++ b/src/app/pages/quizzes/quizzes.page.html
@@ -1,31 +1,27 @@
 <ion-content>
-  <div id="msg">
-    <div class="menuContainer">
-      <ion-icon name="menu" (click)="openFirst()"></ion-icon>
-     </div>
-    <h2 class="userName">{{firstName}},</h2>
-    <p>estos son tus quizzes</p>
-  </div>
   <ion-list>
-    <ion-item-sliding *ngFor="let q of Quizzes" >
-     
-        <ion-card>
-          <div class="quizImg">
-            <img src="{{q.logo}}" />
-          </div>
-          <ion-card-header>
-            <ion-card-title>{{q.name}}</ion-card-title>
-            <ion-card-subtitle>{{q.quantity}} preguntas</ion-card-subtitle>
-          </ion-card-header>
-          <ion-card-content>{{q.description}}</ion-card-content>
+    <div id="msg">
+      <div class="menuContainer">
+        <ion-icon name="menu" (click)="openFirst()"></ion-icon>
+      </div>
+      <h2 class="userName">{{firstName}},</h2>
+      <p>estos son tus quizzes</p>
+    </div>
+    <ion-item-sliding *ngFor="let q of Quizzes">
+      <ion-card>
+        <div class="quizImg">
+          <img src="{{q.logo}}" />
+        </div>
+        <ion-card-header>
+          <ion-card-title>{{q.name}}</ion-card-title>
+          <ion-card-subtitle>{{q.quantity}} preguntas</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>{{q.description}}</ion-card-content>
 
-          <ion-button color="light"
-          (click)="goToQuiz(q.id)"
-          >
-            Ir Al Quiz
-            
-          </ion-button>
-        </ion-card>
+        <ion-button color="light" (click)="goToQuiz(q.id)">
+          Ir Al Quiz
+        </ion-button>
+      </ion-card>
     </ion-item-sliding>
   </ion-list>
 </ion-content>
