--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,7 +5,7 @@
 :root {
 
   --ion-background-color: linear-gradient(217deg, #ffffff, #00838f);
-  
+
   /** primary **/
 
   --ion-color-primary: #005662;
@@ -92,6 +92,8 @@
  */
 
  body.dark {
+  --ion-background-color: linear-gradient(217deg, #000000, #00838f);
+
   --ion-color-primary: #212121;
   --ion-color-primary-rgb: 66,140,255;
   --ion-color-primary-contrast: #ffffff;
@@ -106,7 +108,7 @@
   --ion-color-secondary-shade: #46b0e0;
   --ion-color-secondary-tint: #62ceff;
 
-  --ion-color-tertiary: #4b636e;
+  --ion-color-tertiary: #00838f;
   --ion-color-tertiary-rgb: 106,100,255;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255,255,255;
@@ -163,7 +165,7 @@
  */
 
 .ios body.dark {
-  --ion-background-color: #000000;
+  --ion-background-color: linear-gradient(217deg, #000000, #00838f);
   --ion-background-color-rgb: 0,0,0;
 
   --ion-text-color: #ffffff;
@@ -188,12 +190,12 @@
   --ion-color-step-850: #d9d9d9;
   --ion-color-step-900: #e6e6e6;
   --ion-color-step-950: #f2f2f2;
-
+/* 
   --ion-toolbar-background: #0d0d0d;
 
   --ion-item-background: #000000;
 
-  --ion-card-background: #1c1c1d;
+  --ion-card-background: #1c1c1d; */
 }
 
 .ios body.dark ion-modal {
@@ -209,7 +211,7 @@
  */
 
 .md body.dark {
-  --ion-background-color: #121212;
+  --ion-background-color: linear-gradient(217deg, #000000, #00838f);
   --ion-background-color-rgb: 18,18,18;
 
   --ion-text-color: #ffffff;
@@ -237,11 +239,11 @@
   --ion-color-step-900: #e7e7e7;
   --ion-color-step-950: #f3f3f3;
 
-  --ion-item-background: #1e1e1e;
+/*   --ion-item-background: #1e1e1e;
 
   --ion-toolbar-background: #1f1f1f;
 
   --ion-tab-bar-background: #1f1f1f;
 
-  --ion-card-background: #1e1e1e;
+  --ion-card-background: #1e1e1e; */
 }
