--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -1,13 +1,8 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons mode="ios" slot="start">
-      <ion-back-button text="Atrás" defaultHref="/tabs/games"></ion-back-button>
-    </ion-buttons>
-    <ion-title>{{name}}</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <div class="quizHeader">
+    <ion-back-button defaultHref="/tabs/games"></ion-back-button>
+    <ion-title>{{name}}</ion-title>
+  </div>
   <ion-progress-bar color="primary" value="0.5"></ion-progress-bar>
 
   <ion-card>
@@ -16,20 +11,20 @@
     </div>
     <ion-card-header>
       <ion-card-title>{{name}}</ion-card-title>
-      <ion-card-subtitle class="textQuiz">{{quantity}} preguntas</ion-card-subtitle>
+      <p class="textQuiz">{{this.Subject.name}}</p>
+      <ion-card-subtitle class="questionsQuiz"
+        >{{quantity}} preguntas</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <p class="textQuiz"><em>Descripción</em> {{description}}</p>
-      <img src="{{this.School.logo}}"/>
+      <p class="descriptionQuiz"><em>Descripción</em> <br/> {{description}}</p>
+      <img src="{{this.School.logo}}" class="logoSchool" />
       <p class="textQuiz">{{this.School.name}}</p>
-      <p class="textQuiz">{{this.Subject.name}}</p>
     </ion-card-content>
 
-    <ion-button (click)="comenzar()" class="light">Comenzar!!</ion-button
-    >
+    <ion-button (click)="comenzar()" class="primary buttonStart">Comenzar</ion-button>
   </ion-card>
 
-<!--   <img src="{{logo}}" />
+  <!--   <img src="{{logo}}" />
   <p>Descripción: {{description}}</p>
   <p>Cantidad de preguntas: {{quantity}}</p>
 
