--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -7,11 +7,11 @@
     </ion-toolbar>
   </ion-header>
 
-    <ion-content class="ion-padding">
+    <ion-content>
       <ion-list>
         <ion-item routerLink="/tabs/account" (click)="closeFirst()">
-          <ion-icon name="contact" slot="start" ></ion-icon>
-          <ion-label>Mi Cuenta</ion-label>
+          <ion-icon name="contact" slot="start"></ion-icon>
+          <ion-label style="background-color: none;">Mi Cuenta</ion-label>
         </ion-item>
         <ion-item routerLink="/tabs/quizzes" (click)="closeFirst()">
           <ion-icon name="list-box" slot="start"></ion-icon>
@@ -21,14 +21,14 @@
           <ion-icon name="school" slot="start"></ion-icon>
           <ion-label>Organizaciones</ion-label>
         </ion-item>
-        <ion-item routerLink="/home">
-          <ion-icon name="log-out" slot="start"></ion-icon>
-          <ion-label>Logout</ion-label>
-        </ion-item>
         <ion-item>
           <ion-icon slot="start" name="moon"></ion-icon>
           <ion-label>Dark Mode</ion-label>
           <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="change()" (click)="closeFirst()"></ion-toggle>
+        </ion-item>
+        <ion-item routerLink="/home">
+          <ion-icon name="log-out" slot="start"></ion-icon>
+          <ion-label>Logout</ion-label>
         </ion-item>
       </ion-list>
      </ion-content>
