--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -17,8 +17,16 @@ flex-direction: column;
 align-items: center;
 justify-content: flex-end;
 width: 100%;
-background: #0e1c41;
 border-radius: 6px;
 margin-top: 13rem;
 height: 10rem;
+}
+
+.true {
+  background-color: bisque !important;
+  color: black;
+}
+
+.false {
+  background-color: black !important;
 }
