--- a/src/app/pages/quizzes/quizzes.page.scss
+++ b/src/app/pages/quizzes/quizzes.page.scss
@@ -35,3 +35,11 @@
     justify-content: space-between;
     font-size: 22px;
 }
+
+.textQuizzes {
+    color:black;
+}
+
+.buttonQuizzes {
+    margin: 0rem 0rem 1.5rem 1rem;
+}
