--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -40,22 +40,43 @@
 
     <ion-item-sliding  *ngFor="let q of Questions">
      
-      <ion-card *ngIf="q.id === this.step" >
+      <ion-card *ngIf="(Questions.indexOf(q)+1) === this.step" >
       
         <ion-card-header>
           <ion-card-title> {{q.question}} </ion-card-title>
           </ion-card-header>
         <ion-card-content>
-          <ion-button (click)="changeStep(q.id+1)" *ngFor="let a of q.Answers">
+          <ion-button (click)="changeStep(Questions.indexOf(q)+2, a) " *ngFor="let a of q.Answers">
             {{a.text}}
           </ion-button>
         </ion-card-content>
 
-        <ion-button color="light" *ngFor="let a of Answers" (click)="1+1">
+        <!-- <ion-button color="light" *ngFor="let a of Answers" (click)="checkAnswer(a)">
           Acá va la respuesta
-        </ion-button>
+        </ion-button> -->
       </ion-card>
      
     </ion-item-sliding>
+
+    <ion-item-sliding *ngIf="Finished === 'finished'" >
+     
+      <ion-card>
+      
+        <ion-card-header>
+          <ion-card-title> {{countCorrect}} respuestas correctas </ion-card-title>
+          <ion-card-subtitle> sobre {{Questions.length}}  </ion-card-subtitle>
+          </ion-card-header>
+        <ion-card-content>
+        
+         <ion-img [src]="imageToShow"></ion-img>
+        </ion-card-content>
+
+        <!-- <ion-button color="light" *ngFor="let a of Answers" (click)="checkAnswer(a)">
+          Acá va la respuesta
+        </ion-button> -->
+      </ion-card>
+     
+    </ion-item-sliding>
+
   </ion-list>
 </ion-content>
