--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -26,7 +26,7 @@
           <ion-label>Dark Mode</ion-label>
           <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="change()" (click)="closeFirst()"></ion-toggle>
         </ion-item>
-        <ion-item routerLink="/home">
+        <ion-item routerLink="/home" (click)="logout()">
           <ion-icon name="log-out" slot="start"></ion-icon>
           <ion-label>Logout</ion-label>
         </ion-item>
