--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -1,8 +1,7 @@
-<ion-header>
+<ion-content>
   <div class="head">
     <div class="containerTop">
       <ion-icon name="menu" (click)="openFirst()"></ion-icon>
-     
     </div>
 
     <div class="contentFlex">
@@ -14,52 +13,63 @@
         <p class="userEmail">{{email}}</p>
       </div>
     </div>
-<!--     <div class="containerMenu">
+    <!--     <div class="containerMenu">
       <div class="general">General</div>
       <div routerLink="/tabs/profile-details" class="details">Detalles</div>
       <div routerLink="/tabs/profile-favs" class="favorites">Favoritos</div>
     </div> -->
   </div>
-</ion-header>
 
-<ion-content>
-  <div class="containerTrophy">
-    <div class="tagTrophy">
-      <p class="text4">NIVEL</p>
-    </div>
+  <div class="containerBoxes">
     <div class="trophy">
       <div class="trophyIcon">
         <ion-icon name="trophy"></ion-icon>
+        <p class="textLevel">NIVEL</p>
       </div>
       <div class="trophyLegend">
-        <p class="label">Experto</p>
+        <p class="label">EXPERTO</p>
         <!-- Dependiendo de la cantidad de queizzes que respondió podríamos ponerle un nivel: principiante (menos de 5), aficionado (menos de 10), intermedio (menos de 15), maestro (menos de 20), experto (más de 20) -->
-        <p class="text2">
-          Haz completado 20 quizzes!
-        </p>
+        <p class="text2">Haz completado 20 quizzes!</p>
+      </div>
+    </div>
+
+    <div class="middleContainer">
+      <div class="leftMiddleContainer">
+        <p class="textLevel">FAVORITOS</p>
+        <ion-button
+      routerLink="/profile-favs"
+      expand="full"
+      class="full-length margin-text form-rounded primary"
+    > Registrarse
+    </ion-button>
+        <ion-icon name="heart" class="dataIconFav"></ion-icon>
+      </div>
+      <div class="rightMiddleContainer">
+        <div class="containerData">
+          <ion-icon name="time" class="dataIcon"></ion-icon>
+          <p class="textLevel">PENDIENTES</p>
+      </div>
       </div>
     </div>
 
     <div class="bottomContainer">
       <div class="statisticsContainer">
         <div class="statistics">
-          <p class="statisticsTitle">Estadísticas generales</p>
+          <p class="label">ESTADÍSTICAS GENERALES</p>
         </div>
       </div>
       <div class="statisticsData">
-       <div class="chartContainer">
-          <canvas #doughnutCanvas style="position: relative; height:2rem; width:50%"></canvas>
-<!--           <highcharts-chart
+        <div class="chartContainer">
+          <canvas
+            #doughnutCanvas
+            style="position: relative; height: 3rem;"
+          ></canvas>
+          <!--           <highcharts-chart
             [Highcharts]="Highcharts"
             [options]="chartOptions"
             class="highchartItem"
           >
           </highcharts-chart> -->
-         </div>
-        <div class="line">
-          <svg height="100%" width="3px">
-            <line x1="0" y1="15%" x2="0" y2="85%" class="svgLine"></line>
-          </svg>
         </div>
         <div class="infoQuizzes">
           <p class="text3">Quizzes terminados</p>
