error msg on bad login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,7 +19,7 @@
     placeholder="Contraseña"
     [(ngModel)]="password"
   />
-
+<p id="errorMsg"> {{loginError}} </p>
   <a routerLink="/sign-in" class="linkPassword"> ¿Perdiste tu contraseña? </a>
   <div class="externalLogin">
   <ion-icon name="logo-facebook"></ion-icon>
