--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -45,15 +45,15 @@
 
     <ion-item-sliding *ngIf="Finished === 'finished'" >
      
-      <ion-card>
+      <ion-card id="finalCard">
       
         <ion-card-header>
           <ion-card-title> {{countCorrect}} respuestas correctas </ion-card-title>
           <ion-card-subtitle> sobre {{Questions.length}}  </ion-card-subtitle>
           </ion-card-header>
-        <ion-card-content>
+        <ion-card-content id="finalContent">
         
-         <ion-img [src]="imageToShow"></ion-img>
+         <ion-img id="finalImg" [src]="imageToShow"></ion-img>
         </ion-card-content>
   
       </ion-card>
