--- a/src/app/pages/quiz/quiz.page.scss
+++ b/src/app/pages/quiz/quiz.page.scss
@@ -30,3 +30,26 @@
 .buttonStart {
     margin: 0rem 0rem 1.8rem 1rem;
 }
+
+#finalImg{
+    display: flex;
+   
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+
+}
+
+#finalCard{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#finalContent{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
