changes to schoolslist

--- a/src/app/pages/schoolsList/schoolsList.page.html
+++ b/src/app/pages/schoolsList/schoolsList.page.html
@@ -6,7 +6,7 @@
     <ion-icon name="menu" (click)="openFirst()"></ion-icon>
     <!-- <ion-searchbar placeholder="Buscar" class="searchBar"></ion-searchbar> -->
     <ion-searchbar id="searchbar" type="text" debounce="500" animated 
-placeholder="Filtrar por país" color="dark" 
+placeholder="Filtrar por nombre" color="dark" 
 (ionChange)="searchInputChanged($event.target.value)"
 
 clearInput></ion-searchbar>
