--- a/src/app/pages/schoolsList/schoolsList.page.scss
+++ b/src/app/pages/schoolsList/schoolsList.page.scss
@@ -24,3 +24,8 @@
     font-size: 0.8rem;
     color: black;
 }
+
+#searchbar {
+    border-radius: 5px; 
+    -moz-border-radius: 7px 27px 100px 0px; 
+}
