--- a/src/app/pages/account/account.page.scss
+++ b/src/app/pages/account/account.page.scss
@@ -150,6 +150,8 @@
   justify-content: center;
   text-align: center;
   border: solid 0.09rem white;
+  background-color: transparent;
+  background-repeat: no-repeat;
 }
 
 .rightMiddleContainer {
@@ -157,6 +159,7 @@
   flex-direction: column;
   margin-top: 1rem;
   margin-left: 0.4rem;
+  padding: 0;
   width: 31rem;
   height: 5rem;
   align-items: center;
@@ -169,8 +172,8 @@
   align-self: center;
   justify-self: center;
   margin: 0.1rem 0.1rem;
-  width: 98%;
-  height: 98%;
+  width: 100%;
+  height: 100%;
   background: #348075;
 }
 
