adding info to sign in form

--- a/src/app/pages/sign-in/sign-in.page.html
+++ b/src/app/pages/sign-in/sign-in.page.html
@@ -30,7 +30,7 @@
         <mat-form-field>
           <input
             matInput
-            placeholder="Fecha de nacimiento"
+            placeholder="Fecha de nacimiento MM/DD/AAAA"
             formControlName="birthdate"
             required
           />
