--- a/src/app/pages/enrolled-quizzes/enrolled-quizzes.page.html
+++ b/src/app/pages/enrolled-quizzes/enrolled-quizzes.page.html
@@ -1,6 +1,9 @@
 <ion-content class="ion-padding">
     <div class="menuContainerOrg">
-      <ion-icon name="menu" (click)="openFirst()"></ion-icon>
+       <!-- <ion-icon name="menu" (click)="openFirst()"></ion-icon> -->
+      <ion-buttons mode="ios" slot="start" >
+        <ion-back-button text="Atrás" defaultHref="/tabs/schoolsList"></ion-back-button>
+        </ion-buttons>
     </div>
     <h6 class="title">Estos son tus favoritos</h6>
     <ion-item-sliding *ngFor="let quiz of EnrolledQuizzes">
