--- a/src/app/pages/orgs/orgs.page.scss
+++ b/src/app/pages/orgs/orgs.page.scss
@@ -5,3 +5,31 @@
     top: -10px;
     right : 20px;
 }
+
+#logo{
+    height:60px;
+    width:60px;
+    margin-right: 10px;
+}
+
+#toolbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100vw;
+}
+
+#title {
+    display: flex;
+    flex-direction: row;
+    // justify-content: space-between;
+    right: 20px;
+
+}
+
+#contenedor{
+    display: flex;
+    flex-direction: row;
+    
+
+}
