--- a/src/app/pages/schoolsList/schoolsList.page.html
+++ b/src/app/pages/schoolsList/schoolsList.page.html
@@ -1,55 +1,53 @@
-
-
 <ion-content class="ion-padding">
-  
   <div class="menuContainerOrg">
     <ion-icon name="menu" (click)="openFirst()"></ion-icon>
     <!-- <ion-searchbar placeholder="Buscar" class="searchBar"></ion-searchbar> -->
-    <ion-searchbar id="searchbar" type="text" debounce="500" animated 
-placeholder="Filtrar por nombre" color="dark" 
-(ionChange)="searchInputChanged($event.target.value)"
-
-clearInput></ion-searchbar>
-
+    <ion-searchbar
+      id="searchbar"
+      type="text"
+      debounce="500"
+      animated
+      placeholder="Filtrar por nombre"
+      color="none"
+      (ionChange)="searchInputChanged($event.target.value)"
+      clearInput
+    ></ion-searchbar>
   </div>
-  
-    <ion-list>
-    <ion-item *ngFor="let s of schoolsToShow">
-    <ion-item-sliding >
-      <ion-card>
-        <div class="quizImg">
-          <img src="{{s.logo}}" />
-        </div>
-        <ion-card-header>
-          <ion-card-title class="textSchools">{{s.name}}</ion-card-title>
-          <ion-card-subtitle class="locationSchools">{{s.city}}, {{s.country}}</ion-card-subtitle>
-          <p class="schoolData">{{s.email}}</p>
-        </ion-card-header>
-        <ion-card-content class="textSchools">
-          {{s.description}}
-        </ion-card-content>
+  <ion-item-sliding *ngFor="let s of schoolsToShow">
+    <ion-card>
+      <div class="quizImg">
+        <img src="{{s.logo}}" />
+      </div>
+      <div class="schoolNameContainer">
+        <ion-card-title color="light">{{s.name}}</ion-card-title>
+        <ion-card-subtitle class="locationSchools"
+          >{{s.city}}, {{s.country}}</ion-card-subtitle
+        >
+        <p class="schoolData">{{s.email}}</p>
+      </div>
+      <ion-card-content>
+        {{s.description}}
+      </ion-card-content>
 
-        <ion-button 
-         (click)="goToSchool(s.id)"
-         class="margin-text form-rounded">Más Info</ion-button>
-      </ion-card>
-    </ion-item-sliding>
-  </ion-item>
-  </ion-list>
+      <ion-button (click)="goToSchool(s.id)" class="margin-text form-rounded"
+        >Más Info</ion-button
+      >
+    </ion-card>
+  </ion-item-sliding>
 </ion-content>
 
 <script>
-  const searchbar = document.querySelector('ion-searchbar');
-  const items = Array.from(document.querySelector('ion-list').children);
+  const searchbar = document.querySelector("ion-searchbar");
+  const items = Array.from(document.querySelector("ion-list").children);
 
-  searchbar.addEventListener('ionInput', handleInput);
+  searchbar.addEventListener("ionInput", handleInput);
 
   function handleInput(event) {
     const query = event.target.value.toLowerCase();
     requestAnimationFrame(() => {
-      items.forEach(item => {
+      items.forEach((item) => {
         const shouldShow = item.textContent.toLowerCase().indexOf(query) > -1;
-        item.style.display = shouldShow ? 'block' : 'none';
+        item.style.display = shouldShow ? "block" : "none";
       });
     });
   }
