--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,33 +1,33 @@
 <!-- Sidebar -->
 
-<ion-menu side="start" menuId="first" class="color-white-ionTheme3" >
-  <ion-header>
+<ion-menu side="start" menuId="first" >
+  <ion-header class="backgroundSideBar">
     <ion-toolbar translucent>
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
 
     <ion-content>
-      <ion-list>
+      <ion-list >
         <ion-item routerLink="/tabs/account" (click)="closeFirst()">
-          <ion-icon name="contact" slot="start"></ion-icon>
-          <ion-label style="background-color: none;">Mi Cuenta</ion-label>
+          <ion-icon name="contact" slot="start" color="tertiary"></ion-icon>
+          <ion-label>Mi Cuenta</ion-label>
         </ion-item>
         <ion-item routerLink="/tabs/quizzes" (click)="closeFirst()">
-          <ion-icon name="list-box" slot="start"></ion-icon>
+          <ion-icon name="list-box" slot="start" color="tertiary"></ion-icon>
           <ion-label>Mis quizzes</ion-label>
         </ion-item>
         <ion-item routerLink="/tabs/schoolsList" (click)="closeFirst()">
-          <ion-icon name="school" slot="start"></ion-icon>
+          <ion-icon name="school" slot="start" color="tertiary"></ion-icon>
           <ion-label>Organizaciones</ion-label>
         </ion-item>
         <ion-item>
-          <ion-icon slot="start" name="moon"></ion-icon>
+          <ion-icon slot="start" name="moon" color="tertiary"></ion-icon>
           <ion-label>Dark Mode</ion-label>
-          <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="change()" (click)="closeFirst()"></ion-toggle>
+          <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="change()" (click)="closeFirst()" color="tertiary"></ion-toggle>
         </ion-item>
         <ion-item routerLink="/home" (click)="logout()">
-          <ion-icon name="log-out" slot="start"></ion-icon>
+          <ion-icon name="log-out" slot="start" color="tertiary"></ion-icon>
           <ion-label>Logout</ion-label>
         </ion-item>
       </ion-list>
