--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,8 +22,8 @@
 <p id="errorMsg"> {{loginError}} </p>
   <!-- <a routerLink="/sign-in" class="linkPassword"> ¿Perdiste tu contraseña? </a> -->
   <div class="externalLogin">
-  <!-- <ion-icon (click)="loginFacebook()" name="logo-facebook"></ion-icon>
-  <ion-icon (click)="loginGoogle()" name="logo-google"></ion-icon> -->
+  <ion-icon (click)="doFbLogin()" name="logo-facebook"></ion-icon>
+  <ion-icon (click)="loginGoogle()" name="logo-google"></ion-icon>
 </div>
   <ion-button
     (click)="login()"
