User edit Data from profile

--- a/src/app/edit-user/edit-user.page.html
+++ b/src/app/edit-user/edit-user.page.html
@@ -48,9 +48,9 @@
         <ion-button
           type="submit"
           class="full-length margin-text form-rounded primary"
-          (click)="onSubmitStep()"
           [disabled]="!profileForm.valid"
-        >
+          >
+          <!-- (click)="onSubmitEditUser()" -->
           Editar
         </ion-button>
       </form>
