--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="trophyIcon">
-      <button routerLink="/edit-info" class="leftMiddleContainer">
+      <button routerLink="/edit-user" class="leftMiddleContainer">
       <ion-icon name="finger-print"></ion-icon>
       <p class="textLevel">Mis datos</p>
     </button>
