--- a/src/app/pages/orgs/orgs.page.scss
+++ b/src/app/pages/orgs/orgs.page.scss
@@ -33,3 +33,19 @@
     
 
 }
+
+.buttonOrgs {
+    width: 7rem;
+}
+
+.button {
+  display: flex;
+  justify-content: right;
+  margin-right: 0.3rem;
+  margin-bottom: 0.2rem;
+}
+
+.orgsNameContainer {
+background-color: none;
+margin-left: 1rem;
+}
